fix dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -131,7 +131,7 @@
 
 .dark {
     --light-background: hsl(222 47% 6%);
-    --background: hsl(0 0% 3.9%);
+    --background: hsl(222 47% 8%);
     --foreground: hsl(0 0% 98%);
     --card: hsl(0 0% 3.9%);
     --card-foreground: hsl(0 0% 98%);
@@ -141,7 +141,7 @@
     --primary-foreground: hsl(0 0% 9%);
     --secondary: hsl(0 0% 14.9%);
     --secondary-foreground: hsl(0 0% 98%);
-    --muted: hsl(0 0% 16.08%);
+    --muted: hsl(222 47% 12%);
     --muted-foreground: hsl(0 0% 63.9%);
     --accent: hsl(0 0% 14.9%);
     --accent-foreground: hsl(0 0% 98%);
